# customer-ticket

./: .gitignore  README  setup.sh  start.sh  stop.sh
BE/: app.py  app_environment.py  db.py  docker-compose.yml  env.py
BE/alembic/: env.py
BE/alembic/versions/: cc60e5e45f16_create_tickets_table.py
BE/controllers/: ticket.py
BE/models/: ticket.py
BE/services/: ai_triage.py
backend/: .env.example  .gitignore  app.py  cli.py  pyproject.toml
backend/schemas/: ticket.py
backend/services/: ticket_worker.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/tickets/: page.tsx
frontend/app/tickets/[id]/: page.tsx
frontend/components/: CreateTicketModal.tsx  StatusBadge.tsx  TicketCard.tsx
frontend/lib/: api.ts
frontend/types/: ticket.ts
